<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arrow Food</string>
    <string name="network_unavailable">Network currently unavailable.</string>
    <string name="action_settings">Settings</string>
    <string name="actionbar_cart">Cart</string>
    <string name="action_search">Search</string>
    <string name="drawer_opening">Opening</string>
    <string name="drawer_closing">Closing</string>
    <string name="restaurant_title">Restaurants</string>
    <string name="food_search_title">Search for Food</string>
    <string name="profile_title">Profile</string>
    <string name="prev_orders_title">Previous Orders</string>
    <string name="fave_orders_title">Favorite Orders</string>
    <string name="areas_served_title">Areas Served</string>
    <string name="about_title">About Us</string>
    <string name="legal_title">Legal Information</string>
    <string name="dialog_item_options_title">Item Options</string>
    <string name="dialog_delivery_charges_title">Delivery Charges</string>
    <string name="dialog_cart_options_title">Cart Options</string>
    <string name="dialog_login_title">Login</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_sign_in">Sign in</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_register">Register</string>
    <string name="dialog_register_title">Register</string>
    <string name="dialog_forgot_password">Forgot password</string>
    <string name="dialog_hint_email">Email address</string>
    <string name="dialog_hint_password">Password</string>
    <string name="dialog_login_retry_text">Login failed. Re-enter your credentials or press Forgot password.</string>
    <string name="dialog_registration_retry_text">Registration failed.</string>
    <string name="dialog_register_username">Username</string>
    <string name="dialog_register_full_name">Full name</string>
    <string name="dialog_register_email">Email</string>
    <string name="dialog_register_telephone">Telephone</string>
    <string name="dialog_register_address1">Address 1</string>
    <string name="dialog_register_address2">Address 2</string>
    <string name="dialog_register_city">City</string>
    <string name="dialog_register_postal_code">Postal code</string>
    <string name="dialog_register_country">Country</string>
    <string name="dialog_register_state">Region / state</string>
    <string name="dialog_register_password">Password</string>
    <string name="dialog_register_confirm_password">Confirm password</string>
    <string name="label_eta">ETA: </string>
    <string name="placeholder">placeholder</string>
    <string name="tracking_status_received">Received</string>
    <string name="tracking_status_cooking">Cooking</string>
    <string name="tracking_status_delivering">En route</string>
    <string name="tracking_status_delivered">Delivered</string>
    <string name="description_connector_line">A line used to create space between status markers.</string>
    <string name="maps_marker_food_location">Your order is here</string>
    <string name="header_delivery_text">DELIVERY</string>
    <string name="header_name_text">Guest User</string>
    <string name="header_address_text"></string>
    <string name="cart_subtotal_note">Note: subtotal includes delivery charges.</string>
    <string name="cart_delivery_charge_link_message">Click here to view delivery charges.</string>
    <string name="cart_subtotal_label">Subtotal</string>
    <string name="cart_subtotal_value">$0.00</string>
    <string name="cart_checkout_button_text">Checkout</string>
    <string name="cart_items_in_cart_text">Items in cart</string>
    <string name="cart_quantity_text">Quantity</string>
    <string name="cart_delete_button_text">Delete</string>
    <string name="toast_menu_to_cart">added to cart</string>
    <string name="checkout_total_value">$0.00</string>
    <string name="checkout_order_button_text">Place order</string>
    <string name="cart_single_item_delete">Delete single item</string>
    <string name="cart_multiple_item_delete">Delete multiple items</string>
    <string name="delivery_charge1">Order between $5 - $9.99 = $3.99</string>
    <string name="delivery_charge2">Order between $10 - $19.99 = $4.99</string>
    <string name="delivery_charge3">Order between $20 - $39.99 = $5.99</string>
    <string name="delivery_charge4">Order between $40 - $69.99 = $6.99</string>
    <string name="delivery_charge5">Order above $70 = $10</string>
</resources>
