<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout 
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dip"
        android:layout_weight="10"/>
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp">
        <TextView android:id="@+id/tracking_status_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/transition_progress_bubbles"
            android:text="@string/tracking_status_received"/>
        <ImageView 
            android:src="@drawable/connector_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/description_connector_line"/>
        <TextView android:id="@+id/tracking_status_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/progress_bubble_deactivated"
            android:text="@string/tracking_status_cooking"/>
        <ImageView 
            android:src="@drawable/connector_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/description_connector_line"/>
        <TextView android:id="@+id/tracking_status_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/progress_bubble_deactivated"
            android:text="@string/tracking_status_delivering"/>
        <ImageView 
            android:src="@drawable/connector_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/description_connector_line"/>
        <TextView android:id="@+id/tracking_status_text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/progress_bubble_deactivated"
            android:text="@string/tracking_status_delivered"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_eta" />
	    <TextView 
	        android:id="@+id/text_eta"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/placeholder" />
    </LinearLayout>

</LinearLayout>
