<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
	        <TextView 
	            android:id="@+id/cart_subtotal_label"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/cart_subtotal_label"
	            android:layout_marginTop="8dp"
		        android:layout_marginLeft="4dp"/>

            <Button android:id="@+id/cart_delivery_charge_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_delivery_charge_link_message"
                android:textSize="12sp"
                android:background="@drawable/link_button_selector"
                android:textColor="@color/link_button"/>
        </LinearLayout>
        <Button android:id="@+id/cart_checkout_button"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/cart_checkout_button_text"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/cart_items_in_cart_text"
            android:layout_marginTop="16dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginBottom="4dp"/>
        <TextView 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cart_quantity_text"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
    <ListView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:id="@android:id/list">
	</ListView>
</LinearLayout>