<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/ArrowGray"
    android:columnCount="3"
    android:orientation="vertical"
    android:rowCount="3" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:paddingTop="15dp"
        android:src="@drawable/nav_header_rectangle" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:src="@drawable/nav_header_circle" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:paddingLeft="6dp"
        android:paddingTop="6dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/header_name"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_row="0"
        android:maxLength="20"
        android:text="@string/header_name_text"
        android:textColor="@color/ArrowRed" />

    <LinearLayout
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_row="2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/header_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_delivery_text"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/header_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/header_address_text"
            android:textColor="@android:color/white" />

    </LinearLayout>

</GridLayout>